--- a/src/navbar.styles.css
+++ b/src/navbar.styles.css
@@ -1,6 +1,6 @@
 .navbar {
-    background-color: #333;
-    color: #fff;
+    background-color: #001527;
+    color: #2692d6;
     padding: 10px 20px;
     display: flex;
     justify-content: space-between;
@@ -28,7 +28,7 @@
 .navbar-dropdown {
     display: none;
     position: absolute;
-    background-color: #333;
+    background-color: #001527;
     min-width: 200px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     z-index: 1;
@@ -37,7 +37,7 @@
 .navbar-dropdown a {
     display: block;
     padding: 10px;
-    color: grey;
+    color: #001527;
     text-decoration: none;
 }
 
@@ -46,5 +46,13 @@
 }
 
 .navbar a {
-    color: #fff;
+    color: #2692d6;
+}
+
+.navbar-link {
+    text-decoration: none;
+}
+
+.button {
+    text-decoration: none;
 }
