--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 .navbar {
-  background-color: #333;
+  background-color: #444;
   color: #fff;
   padding: 10px 20px;
   display: flex;
@@ -43,6 +43,7 @@
 
 .navbar-dropdown a:hover {
   background-color: #f5f5f5;
+  color: #333;
 }
 
 .navbar a {
