--- a/src/styles/productCard.style.scss
+++ b/src/styles/productCard.style.scss
@@ -1,9 +1,42 @@
 .product-card-container {
     height: 300px;
     width: 300px;
+    background-color: rgb(202, 216, 229);
 
     .product-image {
         height: 90%;
         width: 100%;
+    }
+    .product-detail {
+        padding: 5px;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .button-container {
+        display: none;
+        justify-content: center;
+        letter-spacing: 0.5px;
+        width: 80%;
+        height: 10%;
+        padding: 5px;
+        position: relative;
+        left: 10%;
+        bottom: 22%;
+        cursor: pointer;
+        &:hover {
+            background-color: black;
+            color: white;
+        }
+    }
+
+    &:hover {
+        .button-container {
+            display: flex;
+            opacity: 0.8;
+        }
+        .product-image {
+            opacity: 0.75;
+        }
     }
 }
