--- a/src/styles/products.style.scss
+++ b/src/styles/products.style.scss
@@ -1,5 +1,5 @@
 .products-container {
-    padding: 2em;
+    padding: 20px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     column-gap: 10px;
