--- a/src/navbar.styles.css
+++ b/src/navbar.styles.css
@@ -15,6 +15,7 @@
 .navbar-menu {
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 
 .navbar-item {
@@ -55,4 +56,7 @@
 
 .button {
     text-decoration: none;
+}
+.cart-bubble {
+    position: relative;
 }
