--- a/src/styles/productCard.style.scss
+++ b/src/styles/productCard.style.scss
@@ -15,6 +15,7 @@
 
     .button-container {
         display: none;
+        background-color: white;
         justify-content: center;
         letter-spacing: 0.5px;
         width: 80%;
