--- a/src/styles/cartDropdown.style.scss
+++ b/src/styles/cartDropdown.style.scss
@@ -1,37 +1,36 @@
 .cart-dropdown-container {
-    position: absolute;
-    width: 20%;
-    height: 30%;
+  position: absolute;
+  width: 20%;
+  height: 30%;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  border: 1px solid black;
+  background-color: white;
+  top: 90px;
+  left: 640px;
+  z-index: 5;
+
+  .empty-message {
+    font-size: 18px;
+    margin: 50px auto;
+  }
+
+  .cart-items {
+    height: 240px;
     display: flex;
     flex-direction: column;
-    padding: 20px;
-    border: 1px solid black;
-    background-color: white;
-    top: 90px;
-    left: 640px;
-    z-index: 5;
-  
-    .empty-message {
-      font-size: 18px;
-      margin: 50px auto;
-    }
-  
-    .cart-items {
-      height: 240px;
-      display: flex;
-      flex-direction: column;
-    //   overflow: scroll;
-    }
-  
-    button {
-      margin-top: auto;
-      background-color: black;
-      color: white;
-      cursor: pointer;
-      &:hover {
-        background-color: #2692d6;
-        color: black;
-      }
+    overflow: scroll;
+  }
+
+  button {
+    margin-top: auto;
+    background-color: black;
+    color: white;
+    cursor: pointer;
+    &:hover {
+      background-color: #2692d6;
+      color: black;
     }
   }
-  
+}
