--- a/src/styles/categories.style.scss
+++ b/src/styles/categories.style.scss
@@ -1,5 +1,10 @@
+.shopping-icon {
+    width: 10%;
+    height: 10%;
+}
 .categories-container {
     width: 100%;
+    padding: 5px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -26,6 +31,7 @@
             }
             .category-body-container {
                 position: absolute;
+                padding: 5px;
                 text-align: center;
                 background-color: rgb(235, 237, 239);
                 border: solid 1px #1e1d1d;
